--- a/css/custom.css
+++ b/css/custom.css
@@ -97,5 +97,15 @@ p {
 	text-transform:uppercase;
 }
 
+.job-header {
+	color:#990099;
+	font-size:110%;
+	font-family:"Roboto Condensed", sans-serif;
+}
+
+.text {
+	font-family:"Open Sans Condensed", sans-serif;
+	font-size:130%;
+}
 
 
