--- a/css/custom.css
+++ b/css/custom.css
@@ -23,6 +23,7 @@
 	font-size:110%;
 	font-family:"Roboto Condensed", sans-serif;
 	font-style:bold;
+	letter-spacing:0.5px;
 }
 
 	a:link {
@@ -34,10 +35,12 @@
 	a:hover {
 		color:#990099;
 		text-decoration: none;
+		text-shadow: 0 0 2px #990099;
 	}
 	a:active {
 		color:black;
 	}
+
 	
 .padding {
 	padding-top:20px;
@@ -49,6 +52,7 @@
 }
 
 /* index modals */
+
 .modal-title {
 	text-align:center;
 	color:#990099;
@@ -71,6 +75,12 @@
 	font-family:"Open Sans Condensed", sans-serif;
 	font-size:100%;
 	float:center;
+}
+
+.thumbnail:hover {
+	-moz-box-shadow: 0 0 10px #990099;
+	-webkit-box-shadow: 0 0  10px #990099;
+	box-shadow: 0 0 10px #990099;
 }
 
 /* about, resume, prints, bookings */
